Basic layout for home screen

--- a/River/Views/Home/Index.cshtml
+++ b/River/Views/Home/Index.cshtml
@@ -1,8 +1,23 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<div class="smart-separator" id="up"></div>
 
-<div class="text-center">
+<div class="text-center" id="welcome_section">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+<div class="content-splash">
+
+    <div class="new-section">
+        NEW
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec quis nibh at felis congue commodo. Vestibulum fermentum tortor id mi. Curabitur sagittis hendrerit ante. Nunc tincidunt ante vitae massa. Pellentesque ipsum. Aliquam in lorem sit amet leo accumsan lacinia. Sed elit dui, pellentesque a, faucibus vel, interdum nec, diam. Fusce consectetuer risus a nunc. Pellentesque sapien. Mauris suscipit, ligula sit amet pharetra semper, nibh ante cursus purus, vel sagittis velit mauris vel metus. Sed ac dolor sit amet purus malesuada congue. Aenean id metus id velit ullamcorper pulvinar. Pellentesque pretium lectus id turpis. Nulla accumsan, elit sit amet varius semper, nulla mauris mollis quam, tempor suscipit diam nulla vel leo. Donec quis nibh at felis congue commodo. Morbi imperdiet, mauris ac auctor dictum, nisl ligula egestas nulla, et sollicitudin sem purus in lacus. Etiam dui sem, fermentum vitae, sagittis id, malesuada in, quam.</p>
+    </div>
+    <div class="features-section">
+        FEATURES
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec quis nibh at felis congue commodo. Vestibulum fermentum tortor id mi. Curabitur sagittis hendrerit ante. Nunc tincidunt ante vitae massa. Pellentesque ipsum. Aliquam in lorem sit amet leo accumsan lacinia. Sed elit dui, pellentesque a, faucibus vel, interdum nec, diam. Fusce consectetuer risus a nunc. Pellentesque sapien. Mauris suscipit, ligula sit amet pharetra semper, nibh ante cursus purus, vel sagittis velit mauris vel metus. Sed ac dolor sit amet purus malesuada congue. Aenean id metus id velit ullamcorper pulvinar. Pellentesque pretium lectus id turpis. Nulla accumsan, elit sit amet varius semper, nulla mauris mollis quam, tempor suscipit diam nulla vel leo. Donec quis nibh at felis congue commodo. Morbi imperdiet, mauris ac auctor dictum, nisl ligula egestas nulla, et sollicitudin sem purus in lacus. Etiam dui sem, fermentum vitae, sagittis id, malesuada in, quam.</p>
+    </div>
+
+</div>
+
+<div class="smart-separator" id="down"></div>
