Sample landing page, boilerplate content and styling of that content display

--- a/River/Views/Home/Index.cshtml
+++ b/River/Views/Home/Index.cshtml
@@ -37,35 +37,42 @@
     </div>
 
 </div>
-<div class="content-splash">
-
-    <div class="section">
-        <h4 class="section-heading">NEW</h4>
-        <p>
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec quis nibh at felis congue commodo.
-            Vestibulum fermentum tortor id mi. Curabitur sagittis hendrerit ante. Nunc tincidunt ante vitae massa.
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec quis nibh at felis congue commodo.
-            Vestibulum fermentum tortor id mi. Curabitur sagittis hendrerit ante. Nunc tincidunt ante vitae massa.
-        </p>
-    </div>
-    <div class="section">
-        <h4 class="section-heading">FEATURES</h4>
-        <div class="card-navigator">
-            <div class="card">
-                <div class="card-body">Feature card Curabitur sagittis hendrerit ante </div>
-            </div>
-            <div class="card">
-                <div class="card-body">Feature card Curabitur sagittis hendrerit ante</div>
-            </div>
-            <div class="card">
-                <div class="card-body">Feature card Curabitur sagittis hendrerit ante</div>
-            </div>
-            <div class="card">
-                <div class="card-body">Feature card Curabitur sagittis hendrerit ante</div>
-            </div>
+<div class="articles">
+    <h4>Articles</h4>
+    <div class="article">
+        <div class="article-title">This is sample article about important topic</div>
+        <div class="article-synopsis">
+            In entirely be to at settling felicity. Fruit two match men you seven share. Needed as or is enough points. Miles at smart ﻿no marry whole linen mr...
         </div>
     </div>
+    <div class="article">
+        <div class="article-title">This is sample article about casual topic</div>
+        <div class="article-synopsis">
+            Income joy nor can wisdom summer. Extremely depending he gentleman improving intention rapturous as...
+        </div>
+    </div>
+    <div class="article">
+        <div class="article-title">This is sample article about some topic</div>
+        <div class="article-synopsis">
+            Silent sir say desire fat him letter. Whatever settling goodness too and honoured she building answered her. Strongly thoughts remember mr...
+        </div>
+    </div>
+    <div class="article">
+        <div class="article-title">This is sample article about lucrative topic</div>
+        <div class="article-synopsis">Up maids me an ample stood given. Certainty say suffering his him collected intention promot...</div>
+    </div>
+</div>
 
+<div class="world">
+    <h4>World</h4>
+    <div class="world-in-data">
+        <div class="data number-container">NUM PLACEHOLDER</div>
+        <div class="data number-container">NUM PLACEHOLDER</div>
+        <div class="data number-container">NUM PLACEHOLDER</div>
+        <div class="card data graph-container">GRAPH PLACEHOLDER</div>
+        <div class="card data graph-container">GRAPH PLACEHOLDER</div>
+        <div class="card data graph-container">GRAPH PLACEHOLDER</div>
+    </div>
 </div>
 
 <div class="smart-separator" id="down"></div>
