--- a/River/wwwroot/css/Main.css
+++ b/River/wwwroot/css/Main.css
@@ -1,5 +1,5 @@
 ﻿.smart-separator {
-  min-height: 1.0rem; }
+  min-height: 0.5rem; }
 
 #up {
   background-image: url("../img/Separator.jpg");
@@ -54,7 +54,12 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  margin: 1.5rem; }
+  padding: 1.5rem 1.5rem 1.5rem 1.5rem;
+  background-image: url(../img/chemicals.png);
+  background-position: right -200px top 0px;
+  background-repeat: no-repeat;
+  background-size: 30%;
+  background-origin: content-box; }
   .articles .article {
     display: flex;
     flex-flow: column;
