Added  dropdown menu into navbar

--- a/River/Views/Home/Index.cshtml
+++ b/River/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 <div class="content-splash">
 
     <div class="section">
-        <h4 class="section-heading">NEW</h4>
+        <h4 class="section-heading">New</h4>
         <p>
             Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec quis nibh at felis congue commodo.
             Vestibulum fermentum tortor id mi. Curabitur sagittis hendrerit ante. Nunc tincidunt ante vitae massa.
@@ -19,7 +19,7 @@
         </p>
     </div>
     <div class="section">
-        <h4 class="section-heading">FEATURES</h4>
+        <h4 class="section-heading">Features</h4>
         <div class="card-navigator">
             <div class="card">
                 <div class="card-body">Feature card Curabitur sagittis hendrerit ante </div>
