--- a/River/wwwroot/css/Main.scss
+++ b/River/wwwroot/css/Main.scss
@@ -6,6 +6,7 @@ $color_beige: #EEE8CB;
 $color_yellow: #E7A838;
 $color_red: #D74726;
 $color_greywhite: #d0d0d0;
+$color_grey: #808080;
 
 $gradient: radial-gradient(circle, rgba(36,46,81,1) 0%, rgba(41,50,89,1) 0%, rgba(29,38,71,1) 73%);
 .smart-separator {
@@ -52,6 +53,14 @@ $gradient: radial-gradient(circle, rgba(36,46,81,1) 0%, rgba(41,50,89,1) 0%, rgb
     .card {
         margin-bottom: 0.5rem;
         margin-right: 0.5rem;
+
+        @media screen and (min-width: 768px) {
+            max-width: 48%;
+        }
+
+        @media screen and (min-width: 1586px) {
+            max-width: 100%;
+        }
     }
 }
 
@@ -70,6 +79,7 @@ $gradient: radial-gradient(circle, rgba(36,46,81,1) 0%, rgba(41,50,89,1) 0%, rgb
 
 .navbar {
     padding: 0.25rem 1rem !important;
+
     .navbar-brand {
         color: $color_beige;
         font-weight: 500;
@@ -80,6 +90,27 @@ $gradient: radial-gradient(circle, rgba(36,46,81,1) 0%, rgba(41,50,89,1) 0%, rgb
         color: $color_beige !important;
         font-weight: 500;
     }
+
+    .dropdown-menu {
+        background: $gradient;
+
+        @media (max-width: 576px) {
+            background-color: transparent;
+            border:none;
+
+            .dropdown-item:hover {
+                background-color: transparent;
+            }
+        }
+
+        .dropdown-item:hover {
+            background-color: $color_dark;
+        }
+    }
+}
+
+#welcome_section {
+    padding: 2rem 0 2rem 0;
 }
 
 .articles {
@@ -87,11 +118,6 @@ $gradient: radial-gradient(circle, rgba(36,46,81,1) 0%, rgba(41,50,89,1) 0%, rgb
     flex-wrap: wrap;
     flex-direction: column;
     padding: 1.5rem 1.5rem 1.5rem 1.5rem;
-    background-image: url(../img/chemicals.png);
-    background-position: right -200px top 0px;
-    background-repeat: no-repeat;
-    background-size: 30%;
-    background-origin: content-box;
 
     .article {
         display: flex;
