--- a/River/wwwroot/css/Main.scss
+++ b/River/wwwroot/css/Main.scss
@@ -108,7 +108,7 @@ $gradient: radial-gradient(circle, rgba(36,46,81,1) 0%, rgba(41,50,89,1) 0%, rgb
         }
     }
 }
-
+//github test
 #welcome_section {
     padding: 2rem 0 2rem 0;
 }
