basic identity setup

--- a/MVCApp/Views/Shared/_Layout.cshtml
+++ b/MVCApp/Views/Shared/_Layout.cshtml
@@ -46,9 +46,7 @@
                         </li>
                     </ul>
                     <ul class="navbar-nav flex-grow-1 justify-content-end">
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Accounts" asp-action="Login">Login</a>
-                        </li>
+                        <partial name="_AccountNavPartial" />
                     </ul>
                 </div>
             </div>
