--- a/MVCApp/Views/Home/Index.cshtml
+++ b/MVCApp/Views/Home/Index.cshtml
@@ -1,10 +1,16 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityLib.Models.User> SignInManager
+@{
     ViewData["Title"] = "Home Page";
 }
 <div class="smart-separator" id="up"></div>
 
 <div class="text-center" id="welcome_section">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">Welcome!</h1>
+    @if (SignInManager.IsSignedIn(User))
+    {
+        <h1 class="display-4">G @User.Identity.Name</h1>
+    }
 </div>
 
 <div class="content-splash">
