--- a/MVCApp/wwwroot/css/Main.css
+++ b/MVCApp/wwwroot/css/Main.css
@@ -108,3 +108,42 @@
       margin: 0.5rem 0 0.5rem 0; }
     .world .world-in-data .number-container {
       background-color: #d0d0d0; }
+
+.page-title {
+  color: #1D2647;
+  padding: 0.75rem 0 0.25rem 0;
+  margin: auto; }
+
+.form-page {
+  display: flex;
+  flex-direction: column; }
+
+.form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .form-container .form-content {
+    padding: 0.5rem;
+    border: 1px solid #d0d0d0;
+    border-radius: 5px;
+    min-width: 30%; }
+    @media (max-width: 992px) {
+      .form-container .form-content {
+        min-width: 50%; } }
+    @media (max-width: 576px) {
+      .form-container .form-content {
+        min-width: 75%; } }
+    .form-container .form-content .form-row {
+      display: flex;
+      justify-content: space-between;
+      padding: 0 5px 0 5px; }
+
+#registrationLink {
+  display: flex;
+  justify-content: flex-end;
+  padding: 0 15px 0 15px; }
+
+.btn-csmain {
+  background-color: #242e51;
+  color: white;
+  border: solid 1px #1D2647; }
