--- a/MVCApp/wwwroot/css/Main.scss
+++ b/MVCApp/wwwroot/css/Main.scss
@@ -7,6 +7,8 @@ $color_yellow: #E7A838;
 $color_red: #D74726;
 $color_greywhite: #d0d0d0;
 $color_grey: #808080;
+$color_blu: #4A4A91;
+$color_lidark: rgba(36,46,81,1);
 
 $gradient: radial-gradient(circle, rgba(36,46,81,1) 0%, rgba(41,50,89,1) 0%, rgba(29,38,71,1) 73%);
 .smart-separator {
@@ -164,4 +166,55 @@ $gradient: radial-gradient(circle, rgba(36,46,81,1) 0%, rgba(41,50,89,1) 0%, rgb
         }
         
     }
+}
+
+.page-title {
+    color: $color_dark;
+    padding: 0.75rem 0 0.25rem 0;
+    margin: auto;
+}
+
+.form-page{
+    display: flex;
+    flex-direction: column;
+}
+
+.form-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .form-content {
+        padding: 0.5rem;
+        border: 1px solid $color_greywhite;
+        border-radius: 5px;
+        min-width: 30%;
+
+        @media (max-width: 992px) {
+            min-width: 50%;
+        }
+
+        @media (max-width: 576px) {
+            min-width: 75%;
+        }
+
+        .form-row {
+            display: flex;
+            justify-content: space-between;
+            padding: 0 5px 0 5px;
+        }
+    }
+}
+
+#registrationLink {
+    display: flex;
+    justify-content: flex-end;
+    padding: 0 15px 0 15px;
+}
+
+.btn-csmain{
+    background-color: $color_lidark;
+    color: white;
+
+    border: solid 1px $color_dark;
 }
