--- a/MVCApp/Views/Shared/_AccountNavPartial.cshtml
+++ b/MVCApp/Views/Shared/_AccountNavPartial.cshtml
@@ -1,13 +1,28 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using IdentityLib.Models;
 @inject SignInManager<IdentityLib.Models.User> SignInManager
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <li class="nav-item">
-        <a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@User.Identity.Name</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Logout</a>
+    //<li class="nav-item">
+      //  <a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@User.Identity.Name</a>
+    //</li>
+    //<li class="nav-item">
+        //<a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Logout</a>
+    //</li>
+
+    <li class="nav-item dropdown">
+        <a class="nav-link text-light dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            @User.Identity.Name
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="nav-link text-light" asp-area="" asp-controller="Account" asp-action="Settings">Account settings</a>
+            @if (User.IsInRole(RoleDef.Admin))
+            {
+                <a class="nav-link text-light" asp-area="" asp-controller="Admin" asp-action="Index">Admin menu</a>
+            }
+            <a class="nav-link text-light" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
+        </div>
     </li>
 }
 else
