--- a/MVCApp/Views/Admin/Index.cshtml
+++ b/MVCApp/Views/Admin/Index.cshtml
@@ -2,3 +2,8 @@
     ViewData["Title"] = "Admin panel";
     Layout = "~/Views/Admin/_AdminNav.cshtml";
 }
+
+<div class="admin-content" id="IndexPage">
+    <h3 class="page-header">Administration panel</h3>
+    <div class="admin-panel">Content...</div>
+</div>
