--- a/MVCApp/Views/Admin/Accounts.cshtml
+++ b/MVCApp/Views/Admin/Accounts.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model IEnumerable<MVCApp.Models.AccountModel>
+@{
     ViewData["Title"] = "Admin - Accounts";
     Layout = "~/Views/Admin/_AdminNav.cshtml";
 }
@@ -73,19 +74,68 @@
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Id)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Status)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Name)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Email)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Registered)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.LastLogin)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.NoOfComments)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.NoOfArticles)
+                    </th>
+                    <th></th>
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>mdo</td>
-                </tr>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Id)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Status)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Email)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Registered)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.LastLogin)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.NoOfComments)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.NoOfArticles)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                        </td>
+                    </tr>
+                }
             </tbody>
         </table>
     </div>
