--- a/MVCApp/Views/Admin/Accounts.cshtml
+++ b/MVCApp/Views/Admin/Accounts.cshtml
@@ -59,10 +59,10 @@
         </button>
     </div>
 
-    <div class="input-group">
-        <input type="text" class="form-control outline-dark btn-right" placeholder="Search query e.g. 'Jim'" aria-label="Recipient's username" aria-describedby="button-addon2">
+    <div class="input-group" id="AccountSearcher">
+        <input type="text" class="form-control outline-dark btn-right" id="SearchBar" placeholder="Search query e.g. 'Jim'" aria-label="Recipient's username" aria-describedby="button-addon2">
         <div class="input-group-append">
-            <button class="btn btn-outline-secondary" type="button" id="button-addon2"><i class="fas fa-search"></i></button>
+            <button class="btn btn-outline-secondary" type="button" id="SearchButton"><i class="fas fa-search"></i></button>
         </div>
     </div>
 </div>
@@ -70,73 +70,5 @@
 
 
 <div class="card table-card">
-    <div class="table-responsive table-borderless">
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Id)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Status)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Name)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Email)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Registered)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.LastLogin)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.NoOfComments)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.NoOfArticles)
-                    </th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Id)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Status)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Name)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Email)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Registered)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.LastLogin)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.NoOfComments)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.NoOfArticles)
-                        </td>
-                        <td>
-                            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
+    @await Html.PartialAsync("_AccountsPartial", Model)
 </div>
