sorting in admin is done

--- a/MVCApp/Views/Admin/Accounts.cshtml
+++ b/MVCApp/Views/Admin/Accounts.cshtml
@@ -13,12 +13,13 @@
             <button class="btn btn-toggle btn-green outline-dark btn-left fixed-width dropdown-toggle" type="button" id="SortButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Date ascending
             </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="#">Date ascending</a>
-                <a class="dropdown-item" href="#">Date descending</a>
-                <a class="dropdown-item" href="#">Name ascending</a>
-                <a class="dropdown-item" href="#">Name descending</a>
-                <a class="dropdown-item" href="#">Role</a>
+            <div class="dropdown-menu sort-dropdown" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#" val="nameAsc">Name ascending</a>
+                <a class="dropdown-item" href="#" val="nameDesc">Name descending</a>
+                <a class="dropdown-item" href="#" val="regDateAsc">Register date ascending</a>
+                <a class="dropdown-item" href="#" val="regDateDesc">Register descending</a>
+                <a class="dropdown-item" href="#" val="logDateAsc">Login date ascending</a>
+                <a class="dropdown-item" href="#" val="logDateDesc">Login date descending</a>
             </div>
         </div>
     </div>
