--- a/MVCApp/Views/Admin/Accounts.cshtml
+++ b/MVCApp/Views/Admin/Accounts.cshtml
@@ -55,7 +55,7 @@
         </div>
     </div>
     <div class="input-group">
-        <button type="button" class="btn btn-blue outline-dark" data-toggle="tooltip" data-placement="top" title="Sync app and identity db tables">
+        <button type="button" class="btn btn-blue outline-dark" href="Synchronize" data-toggle="tooltip" data-placement="top" title="Sync app and identity db tables">
             Sync
         </button>
     </div>
