--- a/MVCApp/Views/Admin/_AccountsPartial.cshtml
+++ b/MVCApp/Views/Admin/_AccountsPartial.cshtml
@@ -37,10 +37,15 @@
                         {
                             <i class="fas fa-check table-symbol"></i>
                         }
-                        else
+                        else if (item.IsPending)
+                        {
+                            <i class="fas fa-clock table-symbol"></i>
+                        }
+                        else if(!item.Status)
                         {
                             <i class="fas fa-times table-symbol"></i>
                         }
+
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Name)
@@ -61,8 +66,8 @@
                         @Html.DisplayFor(modelItem => item.NoOfArticles)
                     </td>
                     <td>
-                        <a asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-pen"></i></a> 
-                        <a asp-action="Detail" asp-route-id="@item.Id"><i class="fas fa-user-cog"></i></a> 
+                        <a asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-pen"></i></a>
+                        <a asp-action="Detail" asp-route-id="@item.Id"><i class="fas fa-user-cog"></i></a>
                         <a asp-action="Delete" asp-route-id="@item.Id"><i class="fas fa-trash-alt"></i></a>
                     </td>
                 </tr>
