Account dele process

--- a/MVCApp/wwwroot/css/AdminStyles.scss
+++ b/MVCApp/wwwroot/css/AdminStyles.scss
@@ -40,6 +40,10 @@ body {
     min-width: 7rem;
 }
 
+.alert {
+    margin: 1rem 0.5rem 1rem 0.5rem;
+}
+
 .outline-dark {
     border: 1px solid $color_grey;
 }
