--- a/MVCApp/wwwroot/css/AdminStyles.css
+++ b/MVCApp/wwwroot/css/AdminStyles.css
@@ -17,6 +17,9 @@
 .fixed-width {
   min-width: 7rem; }
 
+.alert {
+  margin: 1rem 0.5rem 1rem 0.5rem; }
+
 .outline-dark {
   border: 1px solid #6c757d; }
 
